# wdb-moxload

./: .cproject  .gitignore  .project  AUTHORS  Makefile.am  configure.ac
config/: wdbLoaderBase.m4
debian_files/: changelog  control  rules
doc/: moxLoad.man.xml  moxLoad.mk
etc/: LocationForecast.conf  OceanForecast.conf  moxLoad.mk  wdbFromMox.conf
src/: main.cpp  moxLoad.mk
src/configuration/: MoxLoadConfiguration.cpp  MoxLoadConfiguration.h  configFileLookup.cpp  configFileLookup.h  moxLoad.mk  testConfigFileLookup.cpp
src/database/: ForecastCollectionSaver.cpp  ForecastCollectionSaver.h  PointDataSaver.cpp  PointDataSaver.h  moxLoad.mk
src/forecast/: DirectionalForce.cpp  DirectionalForce.h  Forecast.cpp  Forecast.h  ForecastCollection.h  ForecastCollectionPrinter.cpp  ForecastCollectionPrinter.h  ForecastCollector.cpp  ForecastCollector.h  ForecastHandler.h  ForecastLocation.cpp  ForecastLocation.h  HalfFinishedForecast.cpp  HalfFinishedForecast.h  MoxParameterConverter.cpp  MoxParameterConverter.h  Parser.cpp  Parser.h  SpecialParameterHandler.cpp  SpecialParameterHandler.h  moxLoad.mk
src/util/: moxLoad.mk  timeConversion.cpp  timeConversion.h
src/xml/: TagHandler.cpp  TagHandler.h  moxLoad.mk
src/xml/gml/: AbstractGmlTypeHandler.cpp  AbstractGmlTypeHandler.h  PointPropertyTypeHandler.cpp  PointPropertyTypeHandler.h  PointTypeHandler.cpp  PointTypeHandler.h  TimeInstantHandler.cpp  TimeInstantHandler.h  TimeInstantPropertyTypeHandler.cpp  TimeInstantPropertyTypeHandler.h  TimePeriodHandler.cpp  TimePeriodHandler.h  TimePrimitivePropertyTypeHandler.cpp  TimePrimitivePropertyTypeHandler.h  moxLoad.mk  namespace.h
src/xml/metno/: LocationForecastHandler.cpp  LocationForecastHandler.h  OceanForecastHandler.cpp  OceanForecastHandler.h  moxLoad.mk  namespace.h
src/xml/mox/: AnalysisTimeHandler.cpp  AnalysisTimeHandler.h  DocumentHandler.cpp  DocumentHandler.h  ForecastMemberTypeHandler.cpp  ForecastMemberTypeHandler.h  ForecastTypeHandler.cpp  ForecastTypeHandler.h  ForecastsTagHandler.cpp  ForecastsTagHandler.h  MoxTagHandler.cpp  MoxTagHandler.h  ValidTimeHandler.cpp  ValidTimeHandler.h  ValueParameterHandler.cpp  ValueParameterHandler.h  moxLoad.mk  namespace.h
test/: moxLoad.mk
test/mox/: ForecastPointTest.cpp  ForecastTest.cpp  MoxParameterConversionTest.cpp  ParserTest.cpp  SeaMovementTest.cpp  TestingMoxParameterConverter.cpp  TestingMoxParameterConverter.h  TestingParser.cpp  TestingParser.h  ValidTimeTest.cpp  ValueParameterTest.cpp  moxLoad.mk
test/mox/xml/: bergen.xml  moxLoad.mk  oceanforecast_60.10_9.58.2.xml  oceanforecast_60.10_9.58.original.xml  oceanforecast_speedDirectionMismatch.xml  oslo.xml
